[package]
edition = "2021"
name = "session_based_authentication"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.5.0"
actix-web = "4.0.1"
actix-web-lab = "0.12"
anyhow = "1.0.55"
secrecy = "0.8.0"
thiserror = "1.0.30"
tracing = "0.1.31"
# uuid = "0.8.2"
actix-web-flash-messages = {version = "0.3", features = ["cookies"]}
argon2 = "0.3.4"
hex = "0.4"
hmac = {version = "0.11", features = ["std"]}
htmlescape = "0.3"
reqwest = "0.11.9"
serde = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10"
sqlx = {version = "0.5.11", features = [
  "runtime-actix-native-tls", # ,  # "runtime-async-std-native-tls",
  # "runtime-tokio-native-tls",
  # "runtime-actix-rustls",
  # "runtime-async-std-rustls",
  # "runtime-tokio-rustls",
]}# error, some features must enable
time = "0.2"
tokio = "1.17.0"
urlencoding = "2.1.0"
uuid = {version = "0.8.1", features = ["v4", "serde"]}

# [dependencies.reqwest]
# version = "0.11"
# default-features = false
# features = ["json", "rustls-tls", "cookies"]

# [dependencies.actix-session]
# # We are using a fork of `actix-session` that provides a more
# # composable API for session storage backends + TLS/auth support 
# # when using the Redis backend
# git = "https://github.com/LukeMathWalker/actix-extras"
# branch = "rework-actix-session"

# [dependencies.actix-session]
# git = "https://github.com/LukeMathWalker/actix-extras"
# branch = "rework-actix-session"
# features = ["redis-rs-tls-session"]
