[package]
edition = "2021"
name = "session_based_authentication"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
name = "session_based_authentication"
path = "src/main.rs"

[dependencies]
actix-session = "0.5.0"
actix-web = "4"
actix-web-lab = "0.12"
anyhow = "1.0.55"
env_logger = "0.9"
secrecy = {version = "0.8.0", features = ["serde"]}
thiserror = "1.0.30"
tracing = {version = "0.1", features = ["log"]}
# uuid = "0.8.2"
actix-web-flash-messages = {version = "0.3", features = ["cookies"]}
argon2 = "0.3.4"
config = "0.11"
hex = "0.4"
hmac = {version = "0.11", features = ["std"]}
htmlescape = "0.3"
reqwest = "0.11.9"
serde = {version = "1", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0.79"
sha2 = "0.10"
# sqlx = {version = "0.5.11", features = [
#   "runtime-actix-native-tls", # ,  # "runtime-async-std-native-tls",  # "runtime-tokio-native-tls",  # "runtime-actix-rustls",  # "runtime-async-std-rustls",  # "runtime-tokio-rustls",
# ]}# error, some features must enable
chrono = "0.4.15"
time = "0.2"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
urlencoding = "2.1.0"
uuid = {version = "0.8.1", features = ["v4", "serde"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
version = "0.5.7"

# [dependencies.reqwest]
# default-features = false
# features = ["json", "rustls-tls", "cookies"]
# version = "0.11"

# [dependencies.actix-session]
# # We are using a fork of `actix-session` that provides a more
# # composable API for session storage backends + TLS/auth support 
# # when using the Redis backend
# branch = "rework-actix-session"
# git = "https://github.com/LukeMathWalker/actix-extras"

# [dependencies.actix-session]
# branch = "rework-actix-session"
# features = ["redis-rs-tls-session"]
# git = "https://github.com/LukeMathWalker/actix-extras"

[dev-dependencies]
reqwest = "0.11"
