[package]
edition = "2021"
name = "session_based_authentication"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
name = "session_based_authentication"
path = "src/main.rs"

[dependencies]
actix-session = {version = "0.6", features = ["redis-rs-tls-session"]}
actix-web = "4"
actix-web-flash-messages = {version = "0.3", features = ["cookies"]}
actix-web-lab = "0.15"
anyhow = "1"
argon2 = {version = "0.3", features = ["std"]}
base64 = "0.13"
chrono = "0.4.15"
config = "0.11"
env_logger = "0.9"
hex = "0.4"
hmac = {version = "0.12", features = ["std"]}
htmlescape = "0.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = {version = "0.8", features = ["std_rng"]}
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"]}
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "3"
serde_derive = "1.0"
serde_json = "1.0.79"
sha2 = "0.10"
sqlx = {version = "0.5.7", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}
thiserror = "1"
time = "0.2"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
unicode-segmentation = "1"
urlencoding = "2"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
validator = "0.14"

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
linkify = "0.8"
once_cell = "1"
reqwest = "0.11"
serde_json = "1"
serde_urlencoded = "0.7.1"
tokio = {version = "1", features = ["rt", "macros"]}
wiremock = "0.5.2"
